Bug 215352 - Undo after won is allowed
Summary: Undo after won is allowed
Status: RESOLVED FIXED
Alias: None
Product: kmahjongg
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.8
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Mauricio Piacentini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-20 00:46 UTC by frg10
Modified: 2012-01-10 21:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: KDE 4.9
Sentry Crash Report:


Attachments
Solve the reported bug. (1.10 KB, patch)
2011-11-25 18:53 UTC, Christian Krippendorf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description frg10 2009-11-20 00:46:36 UTC
Version:           0.8 (using KDE 4.3.2)
OS:                Linux
Installed from:    Ubuntu Packages

It is possible to undo move after winnig a game.

Following steps to reproduce:
1) Win a game
2) Wait until the end of animation
3) Press "Undo"
4) Remove the last pair
5) Win AGAIN! New result will be placed in High Scores list.
Comment 1 Christian Krippendorf 2011-11-25 18:53:33 UTC
Created attachment 66073 [details]
Solve the reported bug.
Comment 2 Christian Krippendorf 2012-01-10 21:49:50 UTC
SVN commit 1273015 by krippendorf:

Undo after game won - Bug

After a game is won, the application is set into "finished"-mode and no undo actions are allowed anymore.

FIXED-IN: KDE 4.9
REVIEW: 6841


 M  +13 -1     kmahjongg.cpp  
 M  +1 -0      kmahjongg.h  
 M  +17 -0     kmahjonggui.rc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1273015