Undo after game won - Bug

After a game is won, the application is set into "finished"-mode and no undo actions are allowed anymore.

BUG: 215352
FIXED-IN: KDE 4.9
REVIEW: 6841

svn path=/trunk/KDE/kdegames/kmahjongg/; revision=1273015